.playwright-mcp/console-2026-03-16T12-55-47-503Z.log
[      55ms] [ERROR] Failed to load resource: the server responded with a status of 500 (Internal Server Error) @ http://localhost:3000/en:0
[     371ms] Error: Syntax error: Unexpected token

  567 |             )}
  568 |           </div>
> 569 |         )}
      |         ^
  570 |
  571 |         {currentStep === 3 && (
  572 |           <div className="space-y-6">
    at getBabelError (file://F:\generateYouTube\frontend\node_modules\next\dist\build\webpack\plugins\wellknown-errors-plugin\parseBabel.js:24:16)
    at getModuleBuildError (file://F:\generateYouTube\frontend\node_modules\next\dist\build\webpack\plugins\wellknown-errors-plugin\webpackModuleError.js:110:49)
    at async (file://F:\generateYouTube\frontend\node_modules\next\dist\build\webpack\plugins\wellknown-errors-plugin\index.js:29:49)
    at async (file://F:\generateYouTube\frontend\node_modules\next\dist\build\webpack\plugins\wellknown-errors-plugin\index.js:27:21)
[     370ms] [ERROR] ./app/[locale]/create/page.tsx:569:8
Syntax error: Unexpected token

  567 |             )}
  568 |           </div>
> 569 |         )}
      |         ^
  570 |
  571 |         {currentStep === 3 && (
  572 |           <div className="space-y-6"> @ webpack-internal:///./node_modules/next/dist/compiled/@next/react-dev-overlay/dist/client.js:1
[     405ms] [ERROR] Failed to load resource: the server responded with a status of 500 (Internal Server Error) @ http://localhost:3000/favicon.ico:0
[   57171ms] [ERROR] Failed to load resource: the server responded with a status of 500 (Internal Server Error) @ http://localhost:3000/en:0
[   57842ms] Error: Syntax error: Unexpected token

  567 |             )}
  568 |           </div>
> 569 |         )}
      |         ^
  570 |
  571 |         {currentStep === 3 && (
  572 |           <div className="space-y-6">
    at getBabelError (file://F:\generateYouTube\frontend\node_modules\next\dist\build\webpack\plugins\wellknown-errors-plugin\parseBabel.js:24:16)
    at getModuleBuildError (file://F:\generateYouTube\frontend\node_modules\next\dist\build\webpack\plugins\wellknown-errors-plugin\webpackModuleError.js:110:49)
    at async (file://F:\generateYouTube\frontend\node_modules\next\dist\build\webpack\plugins\wellknown-errors-plugin\index.js:29:49)
    at async (file://F:\generateYouTube\frontend\node_modules\next\dist\build\webpack\plugins\wellknown-errors-plugin\index.js:27:21)
[   57845ms] [ERROR] ./app/[locale]/create/page.tsx:569:8
Syntax error: Unexpected token

  567 |             )}
  568 |           </div>
> 569 |         )}
      |         ^
  570 |
  571 |         {currentStep === 3 && (
  572 |           <div className="space-y-6"> @ webpack-internal:///./node_modules/next/dist/compiled/@next/react-dev-overlay/dist/client.js:1
[   57858ms] [ERROR] Failed to load resource: the server responded with a status of 500 (Internal Server Error) @ http://localhost:3000/favicon.ico:0
[   57911ms] [ERROR] ./app/[locale]/create/page.tsx:569:8
Syntax error: Unexpected token

  567 |             )}
  568 |           </div>
> 569 |         )}
      |         ^
  570 |
  571 |         {currentStep === 3 && (
  572 |           <div className="space-y-6"> @ webpack-internal:///./node_modules/next/dist/compiled/@next/react-dev-overlay/dist/client.js:1
[   85180ms] [ERROR] Failed to load resource: the server responded with a status of 404 (Not Found) @ http://localhost:3000/_next/static/webpack/ae26a398b87cdb49.webpack.hot-update.json:0
[   85180ms] [WARNING] [Fast Refresh] performing full reload because your application had an unrecoverable error @ webpack-internal:///./node_modules/next/dist/client/dev/error-overlay/hot-dev-client.js:304
[   86052ms] [ERROR] Failed to load resource: the server responded with a status of 404 (Not Found) @ http://localhost:3000/favicon.ico:0
